--- a/CSE108MiniProject/backend/requirements.txt
+++ b/CSE108MiniProject/backend/requirements.txt
@@ -1,10 +1,12 @@
 #for backend install
 #venv
+#pip  freeze to see installed packages
 
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
+Flask-Admin==1.6.1
 flask-cors==5.0.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
@@ -14,4 +16,4 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
-Flask-Admin==1.6.1
+WTForms==2.3.3
